...
          bottom: TabBar(
            controller: _tabController,
            labelColor: const Color(0xFF212121),
            unselectedLabelColor: Colors.grey,
            indicatorColor: const Color(0xFF4FC3F7),
            tabs: const [
              Tab(text: 'Sign In'),
              Tab(text: 'Sign Up'),
            ],
          ),
        ),
        body: TabBarView(
          controller: _tabController,
          children: [
...
